fix too small scrolling window

--- a/front/src/assets/css/style.css
+++ b/front/src/assets/css/style.css
@@ -390,7 +390,7 @@ a.message-title{
 }
 
 .sc {
-	height: 500px;
+	height: 750px;
 	overflow: auto;
 }
 
